--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="https://static.tildacdn.com/tild6538-3237-4338-b036-373064353030/favicon_cuva.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
